--- a/nodejs-razorpay/razorpay-backend/package.json
+++ b/nodejs-razorpay/razorpay-backend/package.json
@@ -10,14 +10,16 @@
   "author": "Rajat Sablok",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
-    "razorpay": "^2.0.6",
-    "shortid": "^2.2.15"
+    "razorpay": "^2.8.3",
+    "shortid": "^2.2.16"
   },
+  "type": "module",
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.6.0"
   }
 }
